# AI-Agentic-Workflow-GraphRAG

./: .env.template  .gitignore  CLEANUP_SUMMARY.md  FINAL_STATUS.md  Main.py  PRESENTATION_README.md  PROJECT_STRUCTURE.md  README.md  README_A2A_PROTOCOL.md  STARTUP_GUIDE.md  check_relationship_properties.py  check_relationships.py  cleanup.py  cleanup_repo.py  comprehensive_cleanup.py  config.py  debug_backend.py  debug_neo4j_data.py  docker-compose.yml  neo4j_knowledge_graph.dump  openai_requests.py  organize_repo.py  requirements.txt  setup.py  start.py  start_backend.bat  start_backend.py  start_complex_backend.py  start_presentation.py  startup.sh  startup_local.ps1  startup_local.sh  startup_local2.ps1  test_complex_backend.py  test_fixes.py  test_graphrag_with_data.py  test_neo4j_config.py  test_neo4j_connection.py  test_simple_query.py  test_system.py
agent_dummy/: __init__.py  llm_dummy.py
agent_translate/: __init__.py  llm_translate.py
backend/: Dockerfile  README.md  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  run_backend.py  test_azure_openai.py  test_backend_neo4j.py  test_backend_startup.py  test_chat_endpoint.py  test_citation_creation.py  test_global_vars.py  test_global_vars_in_backend.py  test_graphrag_queries.py  test_node_properties.py  test_rag_retrieval.py  test_rag_retrieval_fixed.py  test_ragnode_attributes.py  test_specific_queries.py  test_startup.py
backend/app/: main.py  main_simple.py
backend/app/adapters/: a2a.py  azure_openai.py  neo4j_conn.py  vectordb_faiss.py
backend/app/agents/: __init__.py  base_agent.py  drift_graphrag_agent.py  global_graphrag_agent.py  local_graphrag_agent.py  orchestrator_agent.py
backend/app/api/: a2a_protocol.py  routes.py  well_known.py
backend/app/prompts/: agent_common.md  system_analysis.md  system_assistant.md
backend/app/rag/: graph_interface.py  graph_interface_fixed.py
backend/app/schemas/: a2a.py  a2a_protocol.py  config.py  messages.py  rag.py
backend/app/store/: event_store.py
backend/app/utils/: errors.py  rate_limit.py  telemetry.py
backend/scripts/: build_faiss.py  seed_graph.py
backend/tests/: README.md  __init__.py  conftest.py  test_a2a_protocol.py  test_health.py  test_neo4j_service.py  test_openai_service.py  test_rag_service.py  test_rate_limiter.py  test_schemas.py
docs/: A2A_PROTOCOL_IMPLEMENTATION.md  API_REFERENCE.md  ARCHITECTURE.md  DEPLOYMENT_GUIDE.md  FINAL_CLEANUP_SUMMARY.md  PRESENTATION_READY_VERIFICATION.md  PROJECT_STRUCTURE.md  QUICK_START.md  TECH_STACK_JUSTIFICATION.md  USER_GUIDE.md
frontend/: .env.backup  .env.example  .gitignore  README.md  next.config.js  package-lock.json  package.json  tsconfig.json
scripts/: chunk10_expansion.py  chunk11_contradictions.py  chunk1_expansion.py  chunk2_expansion.py  chunk3_expansion.py  chunk4_expansion.py  chunk5_expansion.py  chunk6_contradictions.py  chunk7_expansion.py  chunk8_expansion.py  chunk9_expansion.py  comprehensive_legal_data.py  expand_legal_data.py  load_contradictory_data.py  load_mock_data.py
test_azure/: test_azure_openai.py
uae-legal-graphrag-neo4j-nextjs/: .env.example  .env.template  .gitignore  BUILD_ERROR_FIXED.md  CLEANUP_COMPLETE.md  CLEANUP_SUMMARY.md  GRAPH_VISUALIZATION_SUCCESS.md  HYBRID_SYSTEM_OVERVIEW.md  MIGRATION_COMPLETE.md  MISSION_ACCOMPLISHED.md  PYTHON_MIGRATION_CLEANUP.md  README.md  VERIFICATION_COMPLETE.md  next.config.js  package-lock.json  package.json  requirements.txt  (+6 more)
(+146 files in other folders)
